[package]
name = "lyred"
version = "1.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5"
rayon = "1"
image = "0.25"
eframe = "0.27"
rfd = "0.14"
once_cell = "1"
portable-atomic = { version = "1", features = ["float"] }
parking_lot = "0.12"
font-kit = "0.13"
windows = { version = "0.56", features = ["Win32_UI_Input_KeyboardAndMouse"] }
ron = "0.8"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
embed-resource = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"
