[package]
name = "lyred"
version = "1.2.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midly = "0.5"
rayon = "1"
image = "0.25"
eframe = "0.31"
rfd = "0.15"
parking_lot = "0.12"
font-kit = "0.14"
winapi = { version = "0.3", features = ["winuser"] }
ron = "0.9"
serde = { version = "1", features = ["derive"] }
crossbeam = "0.8"
rand = "0.9"
strum = { version = "0.27", features = ["derive"] }

[build-dependencies]
embed-resource = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
